# monocular_people_tracking

./: CMakeLists.txt  install.sh  package.xml
include/monocular_people_tracking/: observation.hpp
launch/: monocular_people_tracking.launch  monocular_people_tracking_sim.launch  robot_frames.launch
msg/: Track.msg
scripts/: calibrate_camera_pose.py
src/: monocular_people_tracking_node.cpp
