<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>monocular_people_tracking</name>
  <version>0.0.0</version>
  <description>The monocular_people_tracking package</description>

  <maintainer email="koide@dei.unipd.it">koide</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>image_transport</depend>
  <!-- <depend>tfpose_ros</depend> -->
  <depend>lightweight_human_pose_estimation</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>usb_cam</depend>
  <depend>image_view</depend>

  <export>
  </export>
</package>
